Fix graphQL tests; use @@ConditionalOnProperty instead @Qualifier
Fix some bugs